--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title> HOME </title>
 
 
- <link rel="stylesheet" href="styles.css">
+ <link rel="stylesheet" href="https://pedrodev03.github.io/Portifolio/css.css">
  <ul>
     <li><a href="file:///C:/Users/pc/Desktop/Projetos/HOME.html">Home</a></li>
     <li><a href="file:///C:/Users/Visitante/OneDrive/Nova%20pasta/.vscode/LOGIN.html#news">Projetos</a>
