--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
   <p>Pedro Augusto</p>
   <h3> Um pouco sobre mim </h3> 
 <body>
+    <img src="purpi.png" alt="fundo">
   <div> 
          <br> Olá!! ...</br>
     <section>
