--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 
  <link rel="stylesheet" href="https://pedrodev03.github.io/Portifolio/css.css">
  <ul>
-    <li><a href="file:///C:/Users/pc/Desktop/Projetos/HOME.html">Home</a></li>
-    <li><a href="file:///C:/Users/Visitante/OneDrive/Nova%20pasta/.vscode/LOGIN.html#news">Projetos</a>
+    <li><a href="index.html">Home</a></li>
+    <li><a href="login.html">Projetos</a>
         <ul> 
-          <li><a href="file:///C:/Users/pc/Desktop/Projetos/cadastro%20HTML%20(2).html">Cadastro</a></li>
-          <li><a href="file:///C:/Users/pc/Desktop/Projetos/login%20html.html">Login</a></li>
+          <li><a href="cadastro.html">Cadastro</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
     </li>
     <li><a href="contato">Contato</a></li>
