--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <h3> Um pouco sobre mim </h3> 
 <body>
   <div> 
-         <br> Olá!! ...</br>
+         <br> Olá!! ... passe o mouse aqui</br>
     <section>
              <br>tenho 19 anos curso o ensino superior de Sistemas de Informação pela instituição UEG</br>
              <br> conhecimento avançado em PYTHON.</br>
