--- a/cadastro.html
+++ b/cadastro.html
@@ -2,16 +2,16 @@
  <head>
      
     <title> cadastro html</title>
-    <div> caso já tenha login  <a href="file:///C:/Users/Visitante/OneDrive/Nova%20pasta/.vscode/LOGIN.html">Fazer login</a >.</div>
+    <div> caso já tenha login  <a href="login.html">Fazer login</a >.</div>
     <link rel="icon" type="image/png" href="">
  <link rel="stylesheet" href="styles.css">
 
  <ul>
-    <li><a href="file:///C:/Users/pc/Desktop/Projetos/HOME.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href>Projetos</a>
         <ul> 
-          <li><a href="file:///C:/Users/pc/Desktop/Projetos/cadastro%20HTML%20(2).html">Cadastro</a></li>
-          <li><a href="file:///C:/Users/pc/Desktop/Projetos/login%20html.html">Login</a></li>
+          <li><a href="cadastro.html">Cadastro</a></li>
+          <li><a href="login.html">Login</a></li>
         </ul>
     </li>
     <li><a href="contato">Contato</a></li>
