--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
  <link rel="stylesheet" href="styles.css">
 
  <ul>
-    <li><a href="home.html">Home</a></li>
+    <li><a href="index.html">Home</a></li>
     <li><a href="login.html">Projetos</a>
         <ul> 
           <li><a href="cadastro.html">Cadastro</a></li>
