--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
 <label for="telefone">Digite seu CPF:</label><br><br>
 <input type="number" id="campo" placeholder="CPF" required><br><br>
 <input type="submit" value="Enviar" class="botao"/>
-<div> <a href="file:///C:/Users/pc/Desktop/Projetos/cadastro%20HTML%20(2).html">Cadastrar</a></div>                        
+<div> <a href="cadastro.html">Cadastrar</a></div>                        
 
 </form> 
 
