--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <title> HOME </title>
 
-
+ <link rel="icon" href="icon.png">
  <link rel="stylesheet" href="https://pedrodev03.github.io/Portifolio/css.css">
  <ul>
     <li><a href="index.html">Home</a></li>
