--- a/cadastro.html
+++ b/cadastro.html
@@ -3,7 +3,7 @@
      
     <title> cadastro html</title>
     <div> caso já tenha login  <a href="login.html">Fazer login</a >.</div>
-    <link rel="icon" type="image/png" href="">
+    <link rel="icon" href="icon.png">
  <link rel="stylesheet" href="styles.css">
 
  <ul>
