--- a/contato.html
+++ b/contato.html
@@ -17,7 +17,7 @@
           <li><a href="login.html">Login</a></li>
         </ul>
     </li>
-    <li><a href="contato">Contato</a></li>
+    <li><a href="contato.html">Contato</a></li>
   </ul>
   <p>Contato</p>
   <body>
