--- a/contato.html
+++ b/contato.html
@@ -7,7 +7,7 @@
 
     <title> Contato </title>
 
- 
+ <link rel="icon" href="icon.png">
  <link rel="stylesheet" href="styles.css">
  <ul>
     <li><a href="index.html">Home</a></li>
