--- a/contato.html
+++ b/contato.html
@@ -1,14 +1,11 @@
 <html>
-<!DOCTYPE html>
-<html lang="pt-br">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+ <head>
+     
+    <title> cadastro</title>
+    <link rel="icon" href="icon.png">
 
-    <title> Contato </title>
-
+  
  <link rel="stylesheet" href="styles.css">
- <link rel="icon" href="icon.png">
 
  <ul>
     <li><a href="index.html">Home</a></li>
