--- a/cadastro.html
+++ b/cadastro.html
@@ -1,7 +1,7 @@
 <html>
  <head>
      
-    <title> cadastro html</title>
+    <title> Cadastro </title>
     <link rel="icon" href="icon.png">
     <div> caso já tenha login  <a href="login.html">Fazer login</a >.</div>
   
