--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title> HOME </title>
+    <title> Home </title>
 
  <link rel="icon" href="icon.png">
  <link rel="stylesheet" href="https://pedrodev03.github.io/Portifolio/css.css">
@@ -22,9 +22,9 @@
   <h3> Um pouco sobre mim </h3> 
 <body>
   <div> 
-         <br> Olá!! ... passe o mouse aqui</br>
+         <br> Olá!! ... Passe o mouse aqui</br>
     <section>
-             <br>tenho 19 anos curso o ensino superior de Sistemas de Informação pela instituição UEG</br>
+             <br>Tenho 19 anos curso o ensino superior de Sistemas de Informação pela instituição UEG</br>
              <br> conhecimento avançado em PYTHON.</br>
              <br>conhecimentos medianos nas linguagens:C, HTML, PHP , JAVASCRIPT, CSS.</br>
              <br> conhecimento básico nas linguagens:JAVA, C++ <br>
