--- a/contato.html
+++ b/contato.html
@@ -1,15 +1,15 @@
 <html>
  <head>
      
-    <title> cadastro</title>
+    <title> Contato </title>
     <link rel="icon" href="icon.png">
-
   
  <link rel="stylesheet" href="styles.css">
 
+
  <ul>
     <li><a href="index.html">Home</a></li>
-    <li><a href="login.html">Projetos</a>
+    <li><a href>Projetos</a>
         <ul> 
           <li><a href="cadastro.html">Cadastro</a></li>
           <li><a href="login.html">Login</a></li>
@@ -17,6 +17,7 @@
     </li>
     <li><a href="contato.html">Contato</a></li>
   </ul>
+
   <p>Contato</p>
   <body>
       <div>
