--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
          <br> Olá!! ... Passe o mouse aqui</br>
     <section>
              <br>Tenho 19 anos curso o ensino superior de Sistemas de Informação pela instituição UEG</br>
-             <br> conhecimento avançado em PYTHON.</br>
-             <br>conhecimentos medianos nas linguagens:C, HTML, PHP , JAVASCRIPT, CSS.</br>
-             <br> conhecimento básico nas linguagens:JAVA, C++ <br>
+             <br> Conhecimento avançado em PYTHON.</br>
+             <br>Conhecimentos medianos nas linguagens:C, HTML, PHP , JAVASCRIPT, CSS.</br>
+             <br> Conhecimento básico nas linguagens:JAVA, C++ <br>
     </section>         
   </div>
 </body>  
