--- a/contato.html
+++ b/contato.html
@@ -4,8 +4,7 @@
     <title> Contato </title>
     <link rel="icon" href="icon.png">
   
- <link rel="stylesheet" href="styles.css">
-
+ <link rel="stylesheet" href="https://pedrodev03.github.io/Portifolio/css contato.css">
 
  <ul>
     <li><a href="index.html">Home</a></li>
