--- a/contato.html
+++ b/contato.html
@@ -86,7 +86,7 @@ ul ul li a{  /*itens dentro do sub menu*/
 
 }
   body{
-  background-color:aliceblue;
+  background-color:rebbecapurple;
   }
  div{
   background-color:rebbecapurple;
