--- a/contato.html
+++ b/contato.html
@@ -19,10 +19,8 @@
 
   <p>Contato</p>
   <body>
-      <div>
-          email:pedroaugustor03@gmail.com
-          telefone: (62) 994984386
-      </div>
+   <br>email:pedroaugustor03@gmail.com</br>
+   <br>telefone: (62) 994984386</br>
   </body>
 </html>
 <style>
@@ -85,11 +83,16 @@ ul ul li a{  /*itens dentro do sub menu*/
   
 
 }
-  body{
-  background-color:rebbecapurple;
-  }
- div{
-  background-color:rebbecapurple;
+ 
+    background-color: rebeccapurple;   /*animaco texto*/
+    margin-right: 150px;
+    border-radius: 45px;
+    width: 1000px;
+    height:350px;
+    text-align:center;
+    opacity:100%;
+    box-shadow: inset -7px 0 9px 5px rgb(59, 50, 119);
+    display:block;
  }
 
 </style>
