--- a/contato.html
+++ b/contato.html
@@ -83,7 +83,7 @@ ul ul li a{  /*itens dentro do sub menu*/
   
 
 }
- 
+ body{
     background-color: rebeccapurple;   /*animaco texto*/
     margin-right: 150px;
     border-radius: 45px;
