--- a/contato.html
+++ b/contato.html
@@ -84,15 +84,19 @@ ul ul li a{  /*itens dentro do sub menu*/
 
 }
  body{
+  background-color:aliceblue;
+ }
+ div{
     background-color: rebeccapurple;   /*animaco texto*/
-    margin-right: 150px;
+    margin-right: 250px;
     border-radius: 45px;
-    width: 1000px;
-    height:350px;
+    width: 800px;
+    height:250px;
     text-align:center;
-    opacity:100%;
     box-shadow: inset -7px 0 9px 5px rgb(59, 50, 119);
-    display:block;
+    color:white;
+   
+    
  }
 
 </style>
