--- a/contato.html
+++ b/contato.html
@@ -19,8 +19,11 @@
 
   <p>Contato</p>
   <body>
-   <br>email:pedroaugustor03@gmail.com</br>
-   <br>telefone: (62) 994984386</br>
+    <div>
+   <br>email : pedroaugustor03@gmail.com</br>
+   <br>telefone : (62) 994984386</br>
+   <br>linkedin : https://www.linkedin.com/in/pedro-soares-37b32721b</br>
+    </div>
   </body>
 </html>
 <style>
@@ -83,18 +86,28 @@ ul ul li a{  /*itens dentro do sub menu*/
   
 
 }
+body{
+  background-color: aliceblue;
+}
 
- body{
+ div{
     background-color: rebeccapurple;   /*animaco texto*/
-    margin-right: 250px;
+    margin-left:200px;
+    margin-top: 60px;
     border-radius: 45px;
     width: 800px;
-    height:250px;
+    height:220px;
     text-align:center;
     box-shadow: inset -7px 0 9px 5px rgb(59, 50, 119);
     color:white;
-   
+    font-size: x-large;
     
  }
-
+p{
+    font-size:xx-large;
+    font-family:Tahoma Black ;
+    margin-left:70px;
+    margin-top: 55px;
+    color:darkslateblue;
+}
 </style>
