--- a/cadastro.html
+++ b/cadastro.html
@@ -135,6 +135,7 @@ li {
     padding: 17px;
     font-size: 20px;
     height: 40px;
+    transition:1s;
 }
 li:hover,
 li:focus{
@@ -153,7 +154,7 @@ li a {
 
 ul ul {
     display:none;
-    position: absolute;
+    position:absolute;
     margin-bottom: 2px;
     border-radius: 3px;
     left: 138px;
