--- a/cadastro.html
+++ b/cadastro.html
@@ -180,7 +180,7 @@ ul ul li a{  /*itens dentro do sub menu*/
     margin-left: -45px;
     margin-top: -32px;
     padding:55px;
-    
+    position:fixed;
 }
 
 </style>
