--- a/cadastro.html
+++ b/cadastro.html
@@ -162,6 +162,8 @@ ul ul {
     top: 61px;
     padding-right: 17px;
     width: 132px;
+    position:fixed;
+    top:0;
   
 }
 
@@ -171,7 +173,7 @@ ul li:hover ul {
     display:block;
     margin-bottom: 1px;
     cursor: pointer;
-    position:fixed;
+
     
 }
 
