--- a/cadastro.html
+++ b/cadastro.html
@@ -117,72 +117,62 @@
         color: aliceblue;
     }
      
-    ul{            /*barra superior*/
-    list-style-type: none;
-    margin: -3%;
-    padding: 3px;
-    overflow: hidden;
-    background-color:rebeccapurple;
-    font-size: 27px;
-}
+ul{            /*barra superior*/
+  list-style-type: none;
+  margin: -1%;
+  padding: 2px;
+  overflow: hidden;
+  background-color:rebeccapurple;
+  font-size:25px;
 
+}
 li {
-    float: left;
-    font-family: Arial;
-    text-align: left;
-    margin-left: 1px;
-    transition: 1s;
-    padding: 17px;
-    font-size: 20px;
-    height: 40px;
-    transition:1s;
-    top:0;
+  float: left;
+  font-family: arial;
+  padding: 9px;
+  font-size:18px;
+  margin-left: -14px;
+  height: 48px;
+  text-align: left;
+  transition: 1s;
 }
 li:hover,
 li:focus{
-    background-color: indigo;
+  background-color: indigo;
 }
-
 li a {
-    display: block;
-    color:aliceblue ;
-    text-align: left;
-    padding: 15px 16px;
-    text-decoration: none;
-    margin-left: 10px;
+  display: block;
+  color:aliceblue ;
+  text-align: left;
+  padding: 14px 19px;
+  text-decoration: none;
+  margin-right:27.5px;
+  margin-top: 5px;
 }
-
 
 ul ul {
-    display:none;
-    position:absolute;
-    margin-bottom: 2px;
-    border-radius: 3px;
-    left: 138px;
-    height: 150px;
-    top: 61px;
-    padding-right: 17px;
-    width: 132px;
-    position:fixed;
-  
+  display:none;
+  position: absolute;
+  margin-bottom: 2px;
+  border-radius: 2px;
+  width: 146px;
+
 }
 
 ul li:hover ul {
-    margin-top: 10px;
-    margin-left: -39px;
-    display:block;
-    margin-bottom: 1px;
-    cursor: pointer;
+  margin-top: -2px;
+  margin-left: -9px;
+  display:block;
+  margin-bottom: 7px;
 
-    
 }
 
 ul ul li a{  /*itens dentro do sub menu*/
-    display: block;
-    margin-left: -45px;
-    margin-top: -32px;
-    padding:55px;
+  display: block;
+  margin-left: -20px;
+  padding: 50px;
+  margin-top: -30px;
+  
 
 }
-
 </style>
