--- a/cadastro.html
+++ b/cadastro.html
@@ -108,7 +108,7 @@
     }
    div{           /*caso tenha login*/
        font-family: arial;
-       font-size: x-large;
+       font-size: large;
        color:aliceblue;
        margin-left: 940px;
     }
