--- a/cadastro.html
+++ b/cadastro.html
@@ -108,7 +108,7 @@
     }
    div{           /*caso tenha login*/
        font-family: arial;
-       font-size: large;
+       font-size: x-large;
        color:aliceblue;
        margin-left: 940px;
     }
@@ -137,7 +137,7 @@ li {
   text-align: left;
   transition: 1s;
   padding-top:15px;
-  margin-top:-15px;
+  margin-top:0px;
 }
 li:hover,
 li:focus{
