--- a/cadastro.html
+++ b/cadastro.html
@@ -124,6 +124,9 @@
     overflow: hidden;
     background-color:rebeccapurple;
     font-size:25px;
+    top:0%;
+    position:fixed;
+    z-index:100;
 
 }
 li {
