--- a/cadastro.html
+++ b/cadastro.html
@@ -124,9 +124,7 @@
     overflow: hidden;
     background-color:rebeccapurple;
     font-size:25px;
-    top:0%;
     position:fixed;
-    z-index:100;
 
 }
 li {
@@ -138,6 +136,7 @@ li {
     height: 48px;
     text-align: left;
     transition: 1s;
+    position:fixed;
 }
 li:hover,
 li:focus{
@@ -151,6 +150,7 @@ li a {
     text-decoration: none;
     margin-right:27.5px;
     margin-top: 5px;
+    position:fixed;
 }
 
 ul ul {
