--- a/contato.html
+++ b/contato.html
@@ -104,7 +104,7 @@ body{
     
  }
 p{
-    font-size:xx-large;
+    font-size:24px;
     font-family:Tahoma Black ;
     margin-left:70px;
     margin-top: 55px;
