--- a/cadastro.html
+++ b/cadastro.html
@@ -111,6 +111,7 @@
        font-size: x-large;
        color:aliceblue;
        margin-left: 940px;
+       text-align:center;
     }
   
    a{
@@ -119,8 +120,8 @@
      
     ul{            /*barra superior*/
     list-style-type: none;
-    margin: -2%;
-    padding: 2px;
+    margin: -3%;
+    padding: 1px;
     overflow: hidden;
     background-color:rebeccapurple;
     font-size:25px;
