--- a/cadastro.html
+++ b/cadastro.html
@@ -125,6 +125,7 @@
     overflow: hidden;
     background-color:rebeccapurple;
     font-size:25px;
+    text-align:left;
 
 
 }
@@ -135,8 +136,9 @@ li {
     font-size:18px;
     margin-left:7px;
     height: 45px;
-    text-align: left;
+    text-align:left;
     transition: 1s;
+    width: 100px;
 
 }
 li:hover,
@@ -145,13 +147,12 @@ li:focus{
 }
 li a {
     display: block;
-    color:aliceblue ;
-    text-align: left;
-    padding: 7px 1px;
+    color:aliceblue;
+    padding: 8px 1px;
     text-decoration: none;
-    margin-right:27.5px;
+    margin-right:8px;
     margin-top: 5px;
-    margin-left:40px;
+    margin-left:20px;
 
 }
 
@@ -160,13 +161,14 @@ ul ul {
     position: absolute;
     margin-bottom: -13px;
     border-radius: 2px;
-    width: 120px;
+    width: 105px;
+    padding-left: 0px;
 
 }
 
 ul li:hover ul {
-    margin-top: -2px;
-    margin-left: -9px;
+    margin-top: 10px;
+    margin-left: -5px;
     display:block;
     margin-bottom: 7px;
 
@@ -174,10 +176,10 @@ ul li:hover ul {
 
 ul ul li a{  /*itens dentro do sub menu*/
     display: block;
-    margin-left: -14px;
+    margin-left: -48px;
     padding: 45px;
     margin-top: -30px;
     
   
 }
-</style>
+</style>    
