--- a/contato.html
+++ b/contato.html
@@ -20,9 +20,9 @@
   <p>Contato</p>
   <body>
     <div>
-   <br>email :<a href="pedroaugustor03@gmail.com"></a></br>
+   <br><a href="pedroaugustor03@gmail.com">email</a ></br>
    <br>telefone : (62) 994984386</br>
-   <br>linkedin :<a href="https://www.linkedin.com/in/pedro-soares-37b32721b/"></a></br>
+   <br><a href="https://www.linkedin.com/in/pedro-soares-37b32721b/">linkedin</a ></br>
     </div>
   </body>
 </html>
