--- a/contato.html
+++ b/contato.html
@@ -20,8 +20,8 @@
   <p>Contato</p>
   <body>
     <div>
-   <br><a href="pedroaugustor03@gmail.com">email</a ></br>
-   <br>telefone : (62) 994984386</br>
+   <br>email : pedroaugustor03@gmail.com</br>
+   <br>telefone :<a href="62994984386">email</a ></br>
    <br><a href="https://www.linkedin.com/in/pedro-soares-37b32721b/">linkedin</a ></br>
     </div>
   </body>
