--- a/contato.html
+++ b/contato.html
@@ -21,7 +21,7 @@
   <body>
     <div>
    <br>email : pedroaugustor03@gmail.com</br>
-   <br>telefone :<a href="62994984386">email</a ></br>
+   <br>telefone :62994984386</br>
    <br><a href="https://www.linkedin.com/in/pedro-soares-37b32721b/">linkedin</a ></br>
     </div>
   </body>
